Fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ h6 {
   color: #e4af0e;
   margin-left: 25%;
   margin-right: 20%;
-  margin-top: 2rem;
+  margin-top: 4rem;
 }
 
 /* Text in the main (each paragraph) */
@@ -191,6 +191,10 @@ h6 {
   color: #fff7d1;
   opacity: 0.9;
   transition: 0.1s;
+}
+
+#first-title {
+  margin-top: -1.2rem;
 }
 
 #hr-team {
@@ -258,6 +262,15 @@ h5 {
   font-weight: 600;
   font-size: 2.1rem;
   margin-bottom: 1rem;
+  color: #2b432d;
+}
+
+.h5-description {
+  display: inline-block;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 600;
+  font-size: 2.1rem;
+  margin-bottom: 0.2rem;
   color: #2b432d;
 }
 
